--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </div>
         </nav>
     </header>
+
     <main class="container">
 
         <!--Hero section-->
@@ -37,11 +38,47 @@
 
         <!--Explore menu-->
         <section class="explore_menu_container">
+            
             <h1 class="explore_menu_text">Explore our menu</h1>
+            <div class="explore_menu_gradient_bg"></div>
             <div class="explore_menu_lists">
-                
-            </div>
 
+                <!--Burger-->
+                <div class="food_card">
+                    <div class="food_card_image_container">
+                        <img src="./assets/burger.jpg" alt="burger" class="food_image"/> 
+                    </div>
+                    <div class="food_card_description">
+                        <h1 class="food_titile">Burger</h1>
+                        <p>Burger King, Mcdonalds, Burger Place <span style="color: red;">+3</span></p>
+                    </div>
+                </div>
+
+                <!--Pizza-->
+                <div class="food_card" id="pizza_card">
+                    <div class="food_card_image_container">
+                        <img src="./assets/pizza.jpg" alt="pizza" class="food_image"/> 
+                    </div>
+                    <div class="food_card_description">
+                        <h1 class="food_titile">Pizza</h1>
+                        <p>Pizza Hut, Domino's Pizza<span style="color: red;">+3</span></p>
+                    </div>
+                </div>
+
+                <!--Ice cream-->
+                <div class="food_card">
+                    <div class="food_card_image_container">
+                        <img src="./assets/iceCream.jpg" alt="ice cream" class="food_image"/> 
+                    </div>
+                    <div class="food_card_description">
+                        <h1 class="food_titile">Ice cream</h1>
+                        <p>Baskin Robins, Ibaco <span style="color: red;">+3</span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="explore_menue_view_more">
+                <button class="button_primary">View more</button>
+            </div> 
         </section>
 
     </main>
