--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css"/>
-    <title>Document</title>
+    <title>Landing page</title>
 </head>
 <body>
     <header>
@@ -27,12 +27,10 @@
         <section class="hero_container">
             <div class="hero_image_container">
                 <img src="./assets/hero.jpg" alt="hero image" class="hero_image"/>
-               
             </div>
             <div class="hero_description">
                 <h1 class="hero_text">Order food from favourite restaurants near you.</h1>
                 <button class="button_primary">Oder now</button>
-
             </div>
         </section>
 
@@ -102,10 +100,38 @@
                     </div>
                 </div>
             </div>
-
         </section>
 
+        <!--Update-->
+        <section class="update_container">
+            <h1 class="update_text">Stay Updated</h1>
+            <div class="update_email">
+                <input type="email" placeholder="email@email.com" class="update_email_input"/>
+                <button class="update_get">Get Updates</button>
+            </div>
+        </section>
+
+        <!--Qoute container-->
+        <section class="qoute_container">
+            <div class="qoute_image_overlay">
+                <h3 class="qoute_image_text" style="color: white;">
+                    When a man's stomach is full it makes no difference whether he is rich
+                    or poor.
+                </h3>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <img src="/assets/logo.png" alt="logo"/>
+        <ul>
+            <li>Pricing</li>
+            <li>Terms and condition</li>
+            <li>Partnership</li>
+            <li>Career</li>
+            <li>Contacts</li>
+        </ul>
+    </footer>
     
 </body>
 </html>
