--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
         </section>
 
-        <!--Update-->
+        <!--Email Subscribe container-->
         <section class="email__subcribe__container">
             <div>
               <h1 class="text-xl">Stay Updated</h1>
